# FeedScribe

./: .env.example  CLAUDE.md  README.md  config.yaml  config.yaml.example  pyproject.toml
.feedscribe/: processed.json
.github/workflows/: poll.yml  process.yml
docs/: design.md
docs/superpowers/plans/: 2026-06-20-feedscribe.md
feedscribe/: cli.py  config.py  models.py  pipeline.py  state.py  utils.py
feedscribe/llm/: base.py  gemini.py  openrouter.py
feedscribe/notifiers/: base.py  email.py
feedscribe/sources/: base.py  youtube.py
feedscribe/transcripts/: base.py  youtube.py
tests/: test_cli.py  test_config.py  test_models.py  test_pipeline.py  test_state.py
tests/fixtures/: notes.md  rss_feed.xml  transcript.txt
tests/llm/: test_gemini.py  test_openrouter.py
tests/notifiers/: test_email.py
tests/sources/: test_youtube.py
tests/transcripts/: test_youtube.py
