[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "feedscribe"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "feedparser>=6.0",
    "yt-dlp>=2024.0",
    "youtube-transcript-api>=0.6",
    "google-genai>=1.0",
    "resend>=2.0",
    "markdown-it-py>=3.0",
    "linkify-it-py>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]

[project.scripts]
feedscribe = "feedscribe.cli:cli"
